protocols/session/src/processing/snapshots/hopr_protocol_session__processing__types__tests__frame_builder_should_correctly_allow_empty_segments.snap
---
source: protocols/session/src/processing/types.rs
expression: reassembled
---
Frame {
    frame_id: 1,
    len: 15,
    data: "68656c..726c64",
    is_terminating: true,
}
